2008-03-10  Sam Weinig  <sam@webkit.org>

        Reviewed by Beth Dakin.

        Add Tiger specific results for toDataURL-supportedTypes.html as the image
        encoders have slightly changed between releases.

        * platform/mac-tiger/fast/canvas: Added.
        * platform/mac-tiger/fast/canvas/toDataURL-supportedTypes-expected.txt: Added.

2008-03-02  Julien Chaffraix  <julien.chaffraix@gmail.com>

        Reviewed and landed by Darin.

        bug 12182 : XMLHttpRequest should raise SECURITY_ERR for same-origin policy violations

        * http/tests/xmlhttprequest/exceptions-expected.txt: Updated results

2008-03-10  Johnny Ding  <johnnyding.webkit@gmail.com>

        Reviewed, tweaked and landed by Alexey.

        Bug http://bugs.webkit.org/show_bug.cgi?id=17732
        Test case for testing script decoding after setting its src attribute

        * fast/dom/HTMLScriptElement/resources/script-decoding-error-after-setting-src.js: Added.
        * fast/dom/HTMLScriptElement/script-decoding-error-after-setting-src-expected.txt: Added.
        * fast/dom/HTMLScriptElement/script-decoding-error-after-setting-src.html: Added.

2008-03-07  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Darin.

        Done with Lars.

        Added a testcase for http://bugs.webkit.org/show_bug.cgi?id=16815

        * fast/js/navigator-plugins-crash-expected.txt: Added.
        * fast/js/navigator-plugins-crash.html: Added.

2008-03-08 Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam W.

        Test case for Bug 16516: canvas image patterns stop working with some transformations

        * fast/canvas/canvas-pattern-behaviour.js:

2008-03-08  Oliver Hunt  <oliver@apple.com>

        Reviewed by Mitz.

        Bug 17728: Canvas.createPattern with null repeat argument throws an exception

        Test cases for various way of constructing a pattern

        * fast/canvas/canvas-pattern-behaviour-expected.txt: Added.