@@ -1,3 +1,14 @@
+2008-03-10  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by Sam.
+        
+        <rdar://problem/5779984> REGRESSION (r30391): GMail: Safari won't display the Edit Link dialog
+
+        * editing/pasteboard/5780697-2-expected.txt: Added.
+        * editing/pasteboard/5780697-2.html: Added.
+        * editing/selection/5779984-1-expected.txt: Added.
+        * editing/selection/5779984-1.html: Added.
+
 2008-03-10  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Beth Dakin.
